attempt to fix ugly scrollbars shades #2380

--- a/data/darktable.css
+++ b/data/darktable.css
@@ -912,12 +912,14 @@ dialog scrolledwindow
 }
 
 /* empty space at top/bottom of sidepanels when scrolled */
+undershoot,
 undershoot.top,
 undershoot.bottom,
 undershoot.left,
 undershoot.right
 {
-  background: none;
+  background: transparent;
+  border:none;
 }
 
 
